add_subdirectory(ADC)
add_subdirectory(GPIO)
add_subdirectory(PWM)
add_subdirectory(UART)
add_subdirectory(DualTimer)
add_subdirectory(EXTI)
add_subdirectory(Flash)
add_subdirectory(SSP)
add_subdirectory(SysTick)
add_subdirectory(WDT)
add_subdirectory(DMA)
add_subdirectory(RNG)
add_subdirectory(WZTOE)